<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.grand.grandeur.MainActivity">

    <item
        android:id="@+id/action_add_friend"
        android:orderInCategory="1"
        android:title="@string/action_add_friend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile_settings"
        android:orderInCategory="2"
        android:title="@string/action_profile_settings"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="5"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>
